--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification: # get baidu_site_verification from https://ziyuan.baidu
 # Site Author
 author:
   name: "Xinkai Zou"
-  avatar: "images/profolio-avatar.jpg"
+  avatar: "images/profolio-avatar.png"
   bio: "Tongji University"
   location: "Shanghai, China"
   employer:
