--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ baidu_site_verification: # get baidu_site_verification from https://ziyuan.baidu
 
 # Site Author
 author:
-  name: "Xinkai Zou"
+  name: "Xinkai Zou (邹昕恺)"
   avatar: "images/profolio-avatar.png"
-  bio: "Tongji University"
+  bio: "UC, San Diego<br>Tongji University"
   location: "Shanghai, China"
   employer:
   pubmed:
