--- a/_config.yml
+++ b/_config.yml
@@ -44,8 +44,8 @@ author:
   impactstory: # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm:
   linkedin: "xinkaizou"
-  dblp: # e.g., "https://dblp.org/pid/xx/xxxx.html"
-  orcid: # e.g., "https://orcid.org/xxxx"
+  dblp: https://dblp.org/pid/402/0808.html # e.g., "https://dblp.org/pid/xx/xxxx.html"
+  orcid: https://orcid.org/0009-0008-5083-0797 # e.g., "https://orcid.org/xxxx"
   pinterest:
   soundcloud:
   stackoverflow: # http://stackoverflow.com/users/123456/username
